--- a/matching_assignment_app/templates/matching_assignment_app/matching_assignment_introduction.html
+++ b/matching_assignment_app/templates/matching_assignment_app/matching_assignment_introduction.html
@@ -13,8 +13,8 @@
         <h1 class="h2">Matching & Assignment Optimization</h1>
     </div>
 
-    <p>
-        매칭 및 할당 최적화는 서로 다른 두 그룹의 개체들(예: 사람과 일, 자원과 작업) 사이에서 **최적의 짝을 찾는** 문제입니다. 이는 주어진 비용, 시간, 또는 특정 제약 조건 하에서 최고의 효율성, 최소의 비용, 또는 최대의 만족도를 달성하는 것을 목표로 합니다.
+    <p> 매칭 및 할당 최적화는 서로 다른 두 그룹의 개체들(예: 사람과 일, 자원과 작업) 사이에서 <strong>최적의 짝을 찾는 문제</strong>입니다.
+        이는 주어진 비용, 시간, 또는 특정 제약 조건 하에서 최고의 효율성, 최소의 비용, 또는 최대의 만족도를 달성하는 것을 목표로 합니다.
     </p>
 
     <figure class="text-center">
