--- a/matching_assignment_app/templates/matching_assignment_app/transport_assignment_introduction.html
+++ b/matching_assignment_app/templates/matching_assignment_app/transport_assignment_introduction.html
@@ -56,7 +56,7 @@
     </p>
 
     <h4>3. 수학적 모델</h4>
-    <div class="model-definition-content">
+    <div class="col-md-8 model-definition-content">
         <strong>결정 변수:</strong>
             <div class="math-block">
                 $$ x_{ij} = \begin{cases} 1 & \text{if driver } i \text{ is assigned to zone } j \\ 0 & \text{otherwise} \end{cases} $$
@@ -80,6 +80,13 @@
             </li>
         </ul>
     </div>
+
+    <h4>4. Transport Assignment Demo</h4>
+    <p>
+        <strong>Transport Assignment Demo</strong>에서는
+        사용자가 직접 배송 기사와 배송 구역의 수, 기사별 배송 구역의 비용을 설정하고,
+        최적의 배송 기사별 배송 구역 할당 과정을 체험할 수 있습니다.
+    </p>
 </div>
 {% endblock %}
 
