--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -105,6 +105,9 @@
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'lot_sizing_introduction' %}active{% endif %}" href="{% url 'production_scheduling_app:lot_sizing_introduction' %}">Introduction</a>
                             </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'lot_sizing_demo' %}active{% endif %}" href="{% url 'production_scheduling_app:lot_sizing_demo' %}">Demo</a>
+                            </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Single Machine Scheduling</strong></li>
                             <li class="nav-item nested">
