--- a/production_scheduling_app/templates/production_scheduling_app/rcpsp_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/rcpsp_introduction.html
@@ -22,7 +22,8 @@
         문제의 목표는 주어진 제약 조건들을 모두 만족시키면서 프로젝트의 전체 완료 시간(Makespan)을 최소화하는 최적의 활동 시작 시간을 찾는 것입니다.
     </p>
     <figure>
-        <img src="http://googleusercontent.com/image_generation_content/19" alt="RCPSP 문제 개념도" class="intro-image" style="max-width: 750px;">
+        <img src="{% static 'production_scheduling_app/images/rcpsp_concept.png' %}"
+             alt="RCPSP 문제 개념도" class="intro-image" style="max-width: 600px;">
         <figcaption class="image-caption">그림 1: 활동 간 선후 관계와 더불어, 제한된 자원(인력, 장비 등)으로 인해 동시에 수행할 수 있는 활동의 수가 제약을 받아 전체 프로젝트 기간이 늘어나는 것을 보여줍니다.</figcaption>
     </figure>
 
