--- a/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
@@ -22,7 +22,8 @@
         각 작업은 고유한 처리 시간, 납기일, 중요도 등의 속성을 가지며, 최적화의 목표는 이러한 속성들을 바탕으로 가장 효율적인 작업 순서(sequence)를 찾는 것입니다.
     </p>
     <figure>
-        <img src="http://googleusercontent.com/image_generation_content/16" alt="단일 기계 스케줄링 문제 개념도" class="intro-image" style="max-width: 750px;">
+        <img src="{% static 'production_scheduling_app/images/single_machine_concept.png' %}"
+             alt="단일 기계 스케줄링 문제 개념도" class="intro-image" style="max-width: 600px;">
         <figcaption class="image-caption">그림 1: 작업 처리 순서에 따라 전체 시스템의 효율성이 크게 달라집니다. 최적의 순서는 목표에 따라 결정됩니다.</figcaption>
     </figure>
 
